<resources>
    <string name="app_name">AndroidToolBoxGaliayRomain</string>

    <string name="login_connexion">Connexion</string>
    <string name="login_auth">Identifiant</string>
    <string name="login_pwd">Mot de passe</string>
    <string name="login_valider">VALIDER</string>

    <string name="home_bonjour">Bonjour</string>
    <string name="home_cycle_de_vie">Cycle de vie</string>
    <string name="home_sauvegarde">Sauvegarde</string>
    <string name="home_permissions">Permissions</string>
    <string name="home_web_service">WebService</string>
    <string name="home_deconnexion">Deconnexion</string>

    <string name="sauvegarde_prenom">Prénom</string>
    <string name="sauvegarde_nom">Nom</string>
    <string name="sauvegarde_date_naissance">Date de naissance</string>
    <string name="sauvegarde_valider">VALIDER</string>
    <string name="sauvegarde_titre">Information</string>
    <string name="sauvegarde_json">Par JSON</string>
    <string name="sauvegarde_bdd">Par BDD</string>

    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
