<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fr.isen.galiay.androidtoolbox.SauvegardeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="48dp"
        android:text="@string/sauvegarde_titre"
        android:textColor="@color/colorTextDark"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/json"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/sauvegarde_json"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/jsonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/json"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/bdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sauvegarde_bdd"
        app:layout_constraintEnd_toEndOf="@+id/json"
        app:layout_constraintStart_toStartOf="@+id/json"
        app:layout_constraintTop_toBottomOf="@+id/jsonResult"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bddResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bdd"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>