<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.isen.galiay.androidtoolbox.HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yncrea" />

    <TextView
        android:id="@+id/bonjour"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_bonjour"
        android:textColor="@color/colorTextGrey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonCycleDeVie"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/message"
        android:onClick="goToCycleDeVie"
        app:layout_constraintEnd_toStartOf="@+id/buttonSauvegarde"
        app:layout_constraintTop_toTopOf="@+id/buttonSauvegarde" />

    <TextView
        android:id="@+id/cycleDeVie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_cycle_de_vie"
        android:textColor="@color/colorTextGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonCycleDeVie"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="@+id/buttonCycleDeVie"
        app:layout_constraintTop_toBottomOf="@+id/buttonCycleDeVie" />

    <Button
        android:id="@+id/buttonSauvegarde"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/sd"
        android:onClick="goToSauvegarde"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/bonjour" />

    <TextView
        android:id="@+id/sauvegarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-2dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_sauvegarde"
        android:textColor="@color/colorTextGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSauvegarde"
        app:layout_constraintStart_toStartOf="@+id/buttonSauvegarde"
        app:layout_constraintTop_toBottomOf="@+id/buttonSauvegarde" />

    <Button
        android:id="@+id/buttonPermissions"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/telephone"
        android:onClick="goToPermissions"
        app:layout_constraintEnd_toEndOf="@+id/buttonCycleDeVie"
        app:layout_constraintTop_toBottomOf="@+id/buttonCycleDeVie" />

    <TextView
        android:id="@+id/permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_permissions"
        android:textColor="@color/colorTextGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonPermissions"
        app:layout_constraintStart_toStartOf="@+id/buttonPermissions"
        app:layout_constraintTop_toBottomOf="@+id/buttonPermissions" />

    <Button
        android:id="@+id/buttonWebService"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:background="@drawable/telecharger"
        android:onClick="goToWebService"
        app:layout_constraintStart_toEndOf="@+id/buttonPermissions"
        app:layout_constraintTop_toTopOf="@+id/buttonPermissions" />

    <TextView
        android:id="@+id/webService"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_web_service"
        android:textColor="@color/colorTextGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonWebService"
        app:layout_constraintStart_toStartOf="@+id/buttonWebService"
        app:layout_constraintTop_toBottomOf="@+id/buttonWebService" />

</android.support.constraint.ConstraintLayout>